crates/test-ui/ui/downcast_generic.stderr
error[E0277]: the trait bound `NSArray<NSObject>: objc2::downcast::DowncastTarget` is not satisfied
 --> ui/downcast_generic.rs
  |
  |     let _ = arr.downcast::<NSArray<NSObject>>();
  |                 --------   ^^^^^^^^^^^^^^^^^ the trait `objc2::downcast::DowncastTarget` is not implemented for `NSArray<NSObject>`
  |                 |
  |                 required by a bound introduced by this call
  |
  = help: the trait `objc2::downcast::DowncastTarget` is implemented for `NSArray`
note: required by a bound in `objc2::rc::retained::Retained::<T>::downcast`
 --> $WORKSPACE/crates/objc2/src/rc/retained.rs
  |
  |     pub fn downcast<U: DowncastTarget>(self) -> Result<Retained<U>, Retained<T>>
  |                        ^^^^^^^^^^^^^^ required by this bound in `Retained::<T>::downcast`
